# lunerylab-studio

./: .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: desktop-release.yml  validate.yml
.trash/design-system/: index.ts
docs/: DEV_SETUP.md  OPERATIONS.md  PNPM_OVERRIDES.md  SYSTEM_OVERVIEW.md  UI_FRAMEWORK_STACK.md
docs/adr/: 0001-no-auto-update.md
docs/design/: .luna-dna-brief.md
docs/features/: README.md
docs/hygiene/: README.md  cleanup-exemptions.md  sdk-integration-governance.md
my-app/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.json  ui-framework.config.json  vitest.config.ts
my-app/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
my-app/hooks/: use-creative-capability-readiness.ts  use-debounced-value.ts  use-desktop-available.ts  use-hf-download.ts  use-local-model-summary.ts  use-mobile.ts  use-temporary-message.ts
my-app/lib/: byok-providers.test.ts  byok-providers.ts  csp.ts  desktop-runtime.test.ts  desktop-runtime.ts  media-sniff.ts  (+28 more)
my-app/src-tauri/: Cargo.toml  tauri.conf.json
my-app/src-tauri/capabilities/: desktop-runtime.json
my-app/src-tauri/icons/: icon.icns
my-app/src-tauri/src/: download.rs  engine_llama.rs  engine_mlx.rs  engine_paths.rs  engine_sd.rs  external_apps.rs  hardware.rs  http_bridge.rs  lib.rs  llama_resident.rs  main.rs  mlx_resident.rs  model_residency.rs  profile.rs  sd_cpp_resident.rs  secrets.rs  security.rs  vram_probe.rs
spec/: AI_RUNTIME.md  DESIGN_RULES.md  ENGINEERING_RULES.md  PROJECT_CONSTITUTION.md  UX_RULES.md
(+459 files in other folders)
